Fawkez 1.2 'Charlie X'

  * New features:
  * Update to fop 0.94
  * Update to xerces 2.9.1
  * Update to commons-httpclient 3.1
  * Update to commons-cli 1.1
  * Update to docbook-xsl 1.73.2
  * Update to FindBugs 1.3.1 (#45) (JRE 5 required)
  * Update to PMD 4.1
  * Update to fb-contrib 3.4.2
  * Fixed bugs: #43 #50

Fawkez 1.1 'The Man Trap' (March 31, 2007)
https://www.jcoderz.org/fawkez/browser/tags/FAWKEZ_1_1_0

  * New features: #34
  * Added new severity levels as proposed in #16
  * Fixed bugs: #10
  * added fb-contrib support #14 (V3.0.5)
  * added up-to-date check for retrieve-3rd-party-libs target

Fawkez 1.0 'going public' (November 26, 2006)
https://www.jcoderz.org/fawkez/browser/tags/FAWKEZ_1_0_0